[package]
name = "rustyBot"
version = "0.1.0"
authors = ["zalgo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.22"
gtts = "0.1.0"
[dependencies.serenity]
features = ["client", "standard_framework", "voice", "rustls_backend", "builder", "http", "model", "utils", "cache"]